--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -1,4 +1,4 @@
 username = sa
 password = ghbvf
-url = jdbc:sqlserver://server1:1433;databaseName=JavaData
+url = jdbc:sqlserver://server1:1433;databaseName=JavaData; integratedSecurity=false;
 driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
