--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>6.0.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.11.1.RELEASE</version>
+        </dependency>
+
 
         <!--<dependency>-->
             <!--<groupId>com.microsoft.sqlserver</groupId>-->
