--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,22 @@
             <version>2.10.3</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.2.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.2.2.RELEASE</version>
+        </dependency>
+
+
+
+
         <!--validate-->
         <dependency>
             <groupId>javax.validation</groupId>
